// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ws reducer connection 1`] = `
Object {
  "acceptedPrices": Object {},
  "connection": true,
  "exchangePrices": Object {},
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Object {},
  "status": Array [],
  "tokens": Array [],
}
`;

exports[`ws reducer default 1`] = `
Object {
  "acceptedPrices": Object {},
  "connection": false,
  "exchangePrices": Object {},
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Object {},
  "status": Array [],
  "tokens": Array [],
}
`;

exports[`ws reducer orderBookSnapshot 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "orderBookSnapshot": Object {
    "asks": Array [
      2,
    ],
    "bids": Array [
      1,
    ],
    "pair": "pair",
    "version": 123,
  },
  "orderBookSubscription": "pair",
  "orderHistory": Object {},
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    "token1",
  ],
}
`;

exports[`ws reducer orderBookSnapshot wrong pair 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "orderBookSnapshot": Object {
    "asks": Array [
      2,
    ],
    "bids": Array [
      1,
    ],
    "pair": "pair",
    "version": 123,
  },
  "orderBookSubscription": "pair",
  "orderHistory": Object {},
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    "token1",
  ],
}
`;

exports[`ws reducer orderBookSubscription off 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Object {},
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    "token1",
  ],
}
`;

exports[`ws reducer orderBookSubscription off 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`ws reducer orderBookSubscription off again 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Object {},
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    "token1",
  ],
}
`;

exports[`ws reducer orderBookSubscription on 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "pair",
  "orderHistory": Object {},
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    "token1",
  ],
}
`;

exports[`ws reducer orderBookUpdate 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "orderBookSnapshot": Object {
    "asks": Array [
      2,
    ],
    "bids": Array [
      1,
    ],
    "pair": "pair",
    "version": 123,
  },
  "orderBookSubscription": "pair",
  "orderHistory": Object {},
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    "token1",
  ],
}
`;

exports[`ws reducer orderBookUpdate 2`] = `
Array [
  Array [
    Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    Object {
      "pair": "pair",
    },
  ],
]
`;

exports[`ws reducer orderBookUpdate wrong pair 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "orderBookSnapshot": Object {
    "asks": Array [
      2,
    ],
    "bids": Array [
      1,
    ],
    "pair": "pair",
    "version": 123,
  },
  "orderBookSubscription": "pair",
  "orderHistory": Object {},
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    "token1",
  ],
}
`;

exports[`ws reducer status 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "orderHistory": Object {},
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    "token1",
  ],
}
`;
